# azfs

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: codeql_analysis.yml  test.yml
azfs/: __init__.py  az_file_client.py  az_file_system.py  client.py  core.py  error.py  export_decorator.py  utils.py
azfs/cli/: __init__.py  constants.py  factory.py
azfs/clients/: __init__.py  blob_client.py  client_interface.py  datalake_client.py  queue_client.py
azfs/function_manipulation/: __init__.py  docstring_manipulation.py  signature_manipulation.py
azfs/table_storage/: __init__.py  table_storage.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/sources/: api.rst  development_api.rst  release_history.rst
test/: conftest.py  test_azc_read.py  test_blob_client.py  test_cli.py  test_clients.py  test_datalake_client.py  test_file_manipulation.py  test_function_manipulation.py  test_queue_client.py  test_table_storage.py  test_utils.py
