[tool.poetry]
name = "azfs"
version = "0.1.0"
description = ""
authors = ["yoshiki <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
