[tool.poetry]
name = "azfs"
version = "0.1.0"
description = ""
authors = ["yoshiki <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.1"
pandas = "^1.0.3"
azure-identity = "^1.3.1"
azure-storage-file-datalake = "^12.0.0"
azure-storage-blob = "^12.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
